--- a/src/Pages/Chessboard/Squares/Pawn/styles.module.css
+++ b/src/Pages/Chessboard/Squares/Pawn/styles.module.css
@@ -5,10 +5,11 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .container:hover{
-    background-color: blue;
+    background-color: rgb(0, 0, 255, 0.6);
 }
 
 .piece{
