--- a/src/Pages/Chessboard/Squares/Pawn/styles.module.css
+++ b/src/Pages/Chessboard/Squares/Pawn/styles.module.css
@@ -4,15 +4,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
     border-radius: 10px;
-}
-
-.container:hover{
-    background-color: rgb(0, 0, 255, 0.6);
 }
 
 .piece{
     width: 35px;
     object-fit: contain;
+    pointer-events: none;
 }
