--- a/src/Pages/Chessboard/Squares/Rook/styles.module.css
+++ b/src/Pages/Chessboard/Squares/Rook/styles.module.css
@@ -1,3 +1,14 @@
+.container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    border-radius: 10px;
+}
+
+
 .piece{
     width: 35px;
     object-fit: contain;
