--- a/src/global.css
+++ b/src/global.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'noto sans';
-    src: url('./assets/fonts/NotoSans-VariableFont_wdth\,wght.ttf');
+    font-family: 'mulish';
+    src: url('./assets/fonts/Mulish-VariableFont_wght.ttf');
 }
 
 body{
