--- a/src/Pages/Chessboard/styles.module.css
+++ b/src/Pages/Chessboard/styles.module.css
@@ -5,16 +5,29 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
 }
 
 .chess_board{
     width: 800px;
     height: 800px;
-    padding: 85px 80px 73px 83px;
+    border: 1px solid black;
+    border-radius: 10px;
     background-image: url('./images/chessboard.png');
-    background-size: cover;
+    background-position: center;
+    background-size: contain;
     background-repeat: no-repeat;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
+}
+
+.chess_bar{
+    width: 300px;
+    height: 800px;
+    border: 1px solid black;
+    background-color: rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+    padding: 35px;
+    display: flex;
 }
