--- a/src/Pages/Chessboard/SideBar/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/styles.module.css
@@ -27,6 +27,7 @@
 }
 
 .bar_buttons_resign{
+    position: relative;
     width: 100%;
     height: 60px;
     background-color: rgb(44, 44, 44);
@@ -45,6 +46,7 @@
 }
 
 .bar_buttons_forward{
+    position: relative;
     width: 100%;
     height: 60px;
     background-color: rgb(44, 44, 44);
@@ -57,6 +59,7 @@
 }
 
 .bar_buttons_back{
+    position: relative;
     width: 100%;
     height: 60px;
     background-color: rgb(44, 44, 44);
