--- a/src/Pages/Chessboard/SideBar/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/styles.module.css
@@ -79,3 +79,24 @@
     background-color: rgb(75, 75, 75);
 }
 
+
+@media(max-width: 1170px){
+    .bar{
+        width: 600px;
+        height: 200px;
+        flex-direction: row;
+        padding: 20px 35px;
+    }
+
+    .bar_title{
+        font-size: 1.3rem;
+        align-self: center;
+    }
+
+    .bar_buttons{
+        width: 150px;
+        align-self: center;
+        gap: 5px;
+    }
+
+}
