--- a/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
@@ -59,9 +59,11 @@
     .container{
         width: 200px;
         height: 100%;
+        align-self: center;
     }
 
     .container > h2{
         display: none;
     }
 }
+
