--- a/src/Pages/Chessboard/SideBar/ResignButton/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/ResignButton/styles.module.css
@@ -56,3 +56,22 @@
 .dialog_button:active{
     background-color: #333333
 }
+
+.button:hover{
+    background-color: rgb(59, 59, 59);
+}
+
+.button:active{
+    background-color: rgb(75, 75, 75);
+}
+
+@media(max-width: 620px){
+    .button{
+        width: 60px;
+        height: 40px;
+    }
+
+    .button > img{
+        width: 20px;
+    }
+}
