--- a/src/assets/Components/MessageBox/styles.module.css
+++ b/src/assets/Components/MessageBox/styles.module.css
@@ -3,7 +3,7 @@
 }
 
 .message{
-    width: 100px;
+    width: 70px;
     height: 30px;
     display: flex;
     justify-content: center;
@@ -18,6 +18,8 @@
     left: 0;
     right: 0;
     margin: auto;
+    white-space: nowrap;
+    padding: 10px;
 }
 
 .triangle {
@@ -29,4 +31,10 @@
     transform: rotate(180deg);
     position: absolute;
     bottom: -8px;
+}
+
+@media(max-width: 620px){
+    .message{
+        min-width: 100%;
+    }
 }
