--- a/src/Pages/Authentication/Login/styles.module.css
+++ b/src/Pages/Authentication/Login/styles.module.css
@@ -29,7 +29,7 @@
     margin: 0px;
 }
 
-.form_message{
+.login_message{
     font-size: 0.9rem;
     font-family: 'mulish';
     font-weight: 300;
@@ -37,33 +37,33 @@
     margin: 0px;
 }
 
-.form_link{
+.login_link{
     color: var(--link-text-color);
 }
 
-.form_link:hover{
+.login_link:hover{
     text-decoration: underline;
     cursor: pointer;
 }
 
-.form_link:active{
+.login_link:active{
     color: var(--link-text-color-hover);
 }
 
-.form_link{
+.login_link{
     color: var(--link-text-color);
 }
 
-.form_link:hover{
+.login_link:hover{
     text-decoration: underline;
     cursor: pointer;
 }
 
-.form_link:active{
+.login_link:active{
     color: var(--link-text-color-hover);
 }
 
-.form_button{
+.login_button{
     width: 100%;
     height: 45px;
     border-radius: 10px;
@@ -75,10 +75,10 @@
     cursor: pointer;
 }
 
-.form_button:hover{
+.login_button:hover{
     background-color: var(--login-guest-button-bg-hover);
 }
 
-.form_button:active{
+.login_button:active{
     background-color: var(--login-guest-button-bg-active);
 }
