--- a/src/global.css
+++ b/src/global.css
@@ -20,18 +20,27 @@ body{
     --close: 50;
     --far: 25;
     --farthest: 1;
+
     --background: rgb(0, 0, 112);
     --container-background: rgb(1, 1, 44);
+
     --text-color: rgb(206, 206, 206);
     --input-text-color: rgb(36, 36, 36);
     --error-text: rgb(160, 0, 0);
-    --login-background-button: rgb(0, 0, 161);
-    --login-background-button-hover: rgb(4, 4, 209);
-    --login-background-button-active: rgb(3, 3, 253);
+
+    --login-button-bg: rgb(0, 0, 161);
+    --login-button-bg-hover: rgb(4, 4, 209);
+    --login-button-bg-active: rgb(3, 3, 253);
+
     --link-text-color: rgb(14, 14, 255);
     --link-text-color-hover: rgb(51, 51, 255);
+
     --login-guest-button-bg: rgb(240, 240, 240);
     --login-guest-button-bg-hover: rgb(182, 182, 182);
     --login-guest-button-bg-active: rgb(145, 145, 145);
-    --login-guest-button-text: rgb(0, 0, 161)
+    --login-guest-button-text: rgb(0, 0, 161);
+
+    --menu-button-bg: rgb(31, 31, 153);
+    --menu-button-bg-hover: rgb(39, 39, 180);
+    --menu-button-bg-active: rgb(54, 54, 228);
 }
