--- a/src/Pages/Chessboard/MobileDisplayTurn/styles.module.css
+++ b/src/Pages/Chessboard/MobileDisplayTurn/styles.module.css
@@ -4,6 +4,6 @@
     font-family: 'mulish';
     text-transform: capitalize;
     font-weight: 800;
-    color: rgb(206, 206, 206);
+    color: var(--text-color);
     white-space: nowrap;
 }
