--- a/src/Pages/Authentication/Login/styles.module.css
+++ b/src/Pages/Authentication/Login/styles.module.css
@@ -38,6 +38,9 @@
 }
 
 .login_link{
+    font-size: 0.9rem;
+    font-family: 'mulish';
+    font-weight: 300;
     color: var(--link-text-color);
 }
 
@@ -50,18 +53,6 @@
     color: var(--link-text-color-hover);
 }
 
-.login_link{
-    color: var(--link-text-color);
-}
-
-.login_link:hover{
-    text-decoration: underline;
-    cursor: pointer;
-}
-
-.login_link:active{
-    color: var(--link-text-color-hover);
-}
 
 .login_button{
     width: 100%;
@@ -81,4 +72,22 @@
 
 .login_button:active{
     background-color: var(--login-guest-button-bg-active);
+}
+
+@media(max-width: 620px){
+    .login{
+        width: 350px;
+        background-color: var(--container-background);
+        padding: 20px;
+    }
+    
+    .login_title{
+        font-size: 1.2rem;
+        text-align: center;
+    }
+
+    .login_desc{
+        font-size: 0.9rem;
+        text-align: center;
+    }
 }
