--- a/src/Pages/Authentication/Register/styles.module.css
+++ b/src/Pages/Authentication/Register/styles.module.css
@@ -63,3 +63,21 @@
 .register_link:active{
     color: var(--link-text-color-hover);
 }
+
+@media(max-width: 620px){
+    .register{
+        width: 350px;
+        background-color: var(--container-background);
+        padding: 20px;
+    }
+    
+    .register_title{
+        font-size: 1.2rem;
+        text-align: center;
+    }
+
+    .register_desc{
+        font-size: 0.9rem;
+        text-align: center;
+    }
+}
