--- a/src/Pages/Chessboard/DeclareWinner/styles.module.css
+++ b/src/Pages/Chessboard/DeclareWinner/styles.module.css
@@ -2,7 +2,7 @@
     font-size: 1.5rem;
     font-family: 'mulish';
     font-weight: 800;
-    color: #CECECE;
+    color: var(--text-color);
     grid-column: 1/3;
     grid-row: 1/2;
     text-align: center;
@@ -14,7 +14,8 @@
     font-size: 1rem;
     font-family: 'mulish';
     font-weight: 400;
-    color: #CECECE;
+    background-color: var(--dialog-button-bg);
+    color: var(--text-color);
     width: 100%;
     height: 30px;
     border-radius: 10px;
@@ -25,11 +26,11 @@
 }
 
 .dialog_button:hover{
-    background-color: #272727;
+    background-color: var(--dialog-button-bg-hover);
 }
 
 .dialog_button:active{
-    background-color: #333333
+    background-color: var(--dialog-button-bg-active);
 }
 
 .ignore{
