--- a/src/Pages/Chessboard/SideBar/RedoButton/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/RedoButton/styles.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 60px;
-    background-color: rgb(44, 44, 44);
+    background-color: var(--sidebar-button-bg);
     border: none;
     border-radius: 10px;
     grid-column: 2/3;
@@ -10,8 +10,29 @@
     cursor: pointer;
 }
 
+.button:hover{
+    background-color: var(--sidebar-button-bg-hover);
+}
+
+.button:active{
+    background-color: var(--sidebar-button-bg-active);
+}
+
+
 .button > img{
     width: 25px;
     object-fit: contain;
+}
+
+@media(max-width: 620px){
+    .button > img{
+        width: 20px;
+        object-fit: contain;
+    }
+
+    .button{
+        width: 60px;
+        height: 40px;
+    }
 }
 
