--- a/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 400px;
     padding: 10px;
-    background-color: rgb(27, 27, 27);
+    background-color: var(--background);
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -28,7 +28,7 @@
     gap: 15px;
     overflow: auto;
     scrollbar-width: thin;
-    scrollbar-color: rgb(44, 44, 44) transparent
+    scrollbar-color: var(--scroll-bar-bg) transparent;
 }
 
 .moves::-webkit-scrollbar{
@@ -37,7 +37,7 @@
 }
 
 .moves::-webkit-scrollbar-thumb{
-    background-color: rgb(44, 44, 44);
+    background-color: var(--scroll-bar-bg);
     border-radius: 10px;
 }
 
