--- a/src/Pages/Chessboard/SideBar/TakeBackButton/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/TakeBackButton/styles.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 60px;
-    background-color: rgb(44, 44, 44);
+    background-color: var(--sidebar-button-bg);
     border: none;
     border-radius: 10px;
     grid-column: 1/2;
@@ -11,11 +11,11 @@
 }
 
 .button:hover{
-    background-color: rgb(59, 59, 59);
+    background-color: var(--sidebar-button-bg-hover);
 }
 
 .button:active{
-    background-color: rgb(75, 75, 75);
+    background-color: var(--sidebar-button-bg-active);
 }
 
 .button > img{
@@ -25,7 +25,13 @@
 
 
 @media(max-width: 620px){
+    .button > img{
+        width: 20px;
+        object-fit: contain;
+    }
+
     .button{
-        width: 100px;
+        width: 60px;
+        height: 40px;
     }
 }
