--- a/src/Pages/Chessboard/SideBar/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/styles.module.css
@@ -2,7 +2,7 @@
     width: 300px;
     height: 800px;
     border: 1px solid black;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--container-background);
     border-radius: 10px;
     padding: 35px;
     display: flex;
@@ -16,7 +16,7 @@
     font-family: 'mulish';
     text-transform: capitalize;
     font-weight: 800;
-    color: rgb(206, 206, 206);
+    color: var(--text-color);
     white-space: nowrap;
 }
 
@@ -26,58 +26,6 @@
     gap: 15px;
 }
 
-.bar_buttons_resign{
-    position: relative;
-    width: 100%;
-    height: 60px;
-    background-color: rgb(44, 44, 44);
-    border: none;
-    border-radius: 10px;
-    grid-column: 1/3;
-    grid-row: 1/2;
-    cursor: pointer;
-}
-
-.bar_buttons_resign > img, 
-.bar_buttons_forward > img, 
-.bar_buttons_back > img{
-    width: 25px;
-    object-fit: contain;
-}
-
-.bar_buttons_forward{
-    position: relative;
-    width: 100%;
-    height: 60px;
-    background-color: rgb(44, 44, 44);
-    border: none;
-    border-radius: 10px;
-    grid-column: 1/2;
-    grid-row: 2/3;
-    cursor: pointer;
-
-}
-
-.bar_buttons_back{
-    position: relative;
-    width: 100%;
-    height: 60px;
-    background-color: rgb(44, 44, 44);
-    border: none;
-    border-radius: 10px;
-    grid-column: 2/3;
-    grid-row: 2/3;
-    cursor: pointer;
-}
-
-
-.bar_buttons_resign:hover, .bar_buttons_forward:hover, .bar_buttons_back:hover{
-    background-color: rgb(59, 59, 59);
-}
-
-.bar_buttons_resign:active, .bar_buttons_forward:active, .bar_buttons_back:active{
-    background-color: rgb(75, 75, 75);
-}
 
 
 @media(max-width: 1170px){
