--- a/src/Pages/Chessboard/styles.module.css
+++ b/src/Pages/Chessboard/styles.module.css
@@ -12,6 +12,7 @@
     height: 800px;
     border: 1px solid black;
     border-radius: 10px;
+    overflow: hidden;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: repeat(8, 1fr);
