--- a/src/assets/Components/Dialog/styles.module.css
+++ b/src/assets/Components/Dialog/styles.module.css
@@ -1,4 +1,3 @@
-
 .overlay{
     width: 100%;
     height: 100vh;
@@ -21,5 +20,5 @@
     border-radius: 10px;
     column-gap: 10px;
     row-gap: 20px;
-    background-color: #2c2c2c;
+    background-color: var(--dialog-bg);
 }
