--- a/src/Pages/Chessboard/Squares/Pawn/styles.module.css
+++ b/src/Pages/Chessboard/Squares/Pawn/styles.module.css
@@ -16,6 +16,57 @@
     cursor: grab;
 }
 
+
+.content_title{
+    grid-column: 1/3;
+    font-size: 1.5rem;
+    font-family: 'mulish';
+    font-weight: 800;
+    color: #CECECE;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    text-align: center;
+    margin: 0px;
+}
+
+.content_pieces{
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 10px;
+
+}
+
+.content_piece{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--dialog-button-bg);
+    border: 0px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.content_piece:hover{
+    background-color: var(--dialog-button-bg-hover);
+}
+
+.content_piece:active{
+    background-color: var(--dialog-button-bg-active);
+}
+
+.content_piece > img{
+    width: 30px;
+    object-fit: contain;
+}
+
+.ignore{
+    display: none;
+}
+
 @media(max-width: 1170px){
     .piece{
         width: 25px;
