--- a/src/global.css
+++ b/src/global.css
@@ -55,6 +55,12 @@ body{
     --dialog-button-bg-hover: rgb(0, 0, 104);
     --dialog-button-bg-active: rgb(17, 17, 131);
 
+
+    --menu-button-submit-bg: #CECECE;
+    --menu-button-submit-hover: #b5b5c8;
+    --menu-button-submit-active: #9c9cc9;
+    --menu-button-text-color: #1f1f99;
+
     --dialog-promotion-button-bg: rgb(1, 1, 148);
     --dialog-promotion-button-hover: rgb(11, 11, 172);
     --dialog-promotion-button-active: rgb(38, 38, 230);
