--- a/src/Pages/Chessboard/Squares/Pawn/styles.module.css
+++ b/src/Pages/Chessboard/Squares/Pawn/styles.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     border-radius: 10px;
     background-color: transparent;
-    transition: none;
+    transition: all 0s;
 }
 
 
