--- a/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
@@ -61,7 +61,8 @@
     .container{
         width: 200px;
         height: 100%;
-        align-self: center;
+        grid-column: 2/3;
+        grid-row: 1/3;
     }
 
     .container > h2{
@@ -69,3 +70,23 @@
     }
 }
 
+@media(max-width: 620px){
+    .container{
+        width: 100%;
+        height: auto;
+        background-color: rgba(0, 0, 0, 0.5);
+        gap: 10px;
+        border-radius: 0px;
+    }
+
+    .moves{
+        height: 60px;
+        flex-direction: row;    
+        gap: 35px;
+    }
+
+    .container > h2{
+        display: block;
+        align-self: center;
+    }
+}
