--- a/src/Pages/Chessboard/SideBar/MobileBar/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/MobileBar/styles.module.css
@@ -1,7 +1,7 @@
 .container{
     width: 100%;
     height: 70px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: var(--mobile-container-background);
     display: flex;
     justify-content: space-between;
     align-items: center;
