--- a/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/ShowMoves/styles.module.css
@@ -74,9 +74,10 @@
     .container{
         width: 100%;
         height: auto;
-        background-color: rgba(0, 0, 0, 0.5);
+        background-color: var(--mobile-container-background);
         gap: 10px;
         border-radius: 0px;
+        padding: 10px 25px;
     }
 
     .moves{
