--- a/src/Pages/Chessboard/SideBar/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/styles.module.css
@@ -36,6 +36,7 @@
         padding: 20px 35px;
         grid-template-columns: repeat(3, auto);
         grid-template-rows: 65px 85px;
+        column-gap: 15px;
     }
 
     .bar_title{
