--- a/src/global.css
+++ b/src/global.css
@@ -23,6 +23,7 @@ body{
 
     --background: rgb(0, 0, 112);
     --container-background: rgb(1, 1, 44);
+    --mobile-container-background: rgba(0, 0, 0, 0.5);
 
     --text-color: rgb(206, 206, 206);
     --input-text-color: rgb(36, 36, 36);
