--- a/src/Pages/Menu/Greeting/styles.module.css
+++ b/src/Pages/Menu/Greeting/styles.module.css
@@ -1,3 +1,15 @@
+.container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+}
+.photo{
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+}
+
 .title{
     font-size: 1.6rem;
     font-family: 'mulish';
