--- a/src/Pages/FindPlayers/DisplayChallenger/styles.module.css
+++ b/src/Pages/FindPlayers/DisplayChallenger/styles.module.css
@@ -26,7 +26,22 @@
     align-self: center;
 }
 
-.queue_player > button{
-    height: 30px;
+.queue_button{
+    width: 100%;
+    height: 45px;
+    background-color: var(--menu-button-bg);
+    color: #CECECE;
+    border-radius: 10px;
+    font-family: 'mulish';
+    font-size: 1.2rem;
+    border: none;
     cursor: pointer;
+}
+
+.queue_button:hover{
+    background-color: var(--menu-button-bg-hover);    
+}
+
+.queue_button:active{
+    background-color: var(--menu-button-bg-active);
 }
