--- a/src/Pages/FindPlayers/DisplayChallenger/styles.module.css
+++ b/src/Pages/FindPlayers/DisplayChallenger/styles.module.css
@@ -29,7 +29,7 @@
 .queue_button{
     width: 100%;
     height: 45px;
-    background-color: var(--menu-button-bg);
+    background-color: var(--challenge-button-bg);
     color: #CECECE;
     border-radius: 10px;
     font-family: 'mulish';
@@ -39,9 +39,9 @@
 }
 
 .queue_button:hover{
-    background-color: var(--menu-button-bg-hover);    
+    background-color: var(--challenge-button-bg-hover);    
 }
 
 .queue_button:active{
-    background-color: var(--menu-button-bg-active);
+    background-color: var(--challenge-button-bg-active);
 }
