--- a/src/Pages/Authentication/ForgotPassword/styles.module.css
+++ b/src/Pages/Authentication/ForgotPassword/styles.module.css
@@ -37,17 +37,17 @@
     font-family: 'mulish';
     font-size: 1.2rem;
     border: none;
-    background-color: var(--login-guest-button-bg);
+    background-color: var(--button-bg);
     color: var(--login-guest-button-text);
     cursor: pointer;
 }
 
 .forgot_button:hover{
-    background-color: var(--login-guest-button-bg-hover);
+    background-color: var(--button-bg-hover);
 }
 
 .forgot_button:active{
-    background-color: var(--login-guest-button-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 @media(max-width: 620px){
