--- a/src/Pages/Authentication/Login/styles.module.css
+++ b/src/Pages/Authentication/Login/styles.module.css
@@ -61,17 +61,17 @@
     font-family: 'mulish';
     font-size: 1.2rem;
     border: none;
-    background-color: var(--login-guest-button-bg);
+    background-color: var(--button-bg);
     color: var(--login-guest-button-text);
     cursor: pointer;
 }
 
 .login_button:hover{
-    background-color: var(--login-guest-button-bg-hover);
+    background-color: var(--button-bg-hover);
 }
 
 .login_button:active{
-    background-color: var(--login-guest-button-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 @media(max-width: 620px){
