--- a/src/Pages/Chessboard/DeclareWinner/styles.module.css
+++ b/src/Pages/Chessboard/DeclareWinner/styles.module.css
@@ -14,7 +14,7 @@
     font-size: 1rem;
     font-family: 'mulish';
     font-weight: 400;
-    background-color: var(--dialog-button-bg);
+    background-color: var(--button-bg);
     color: var(--text-color);
     width: 100%;
     height: 30px;
@@ -26,11 +26,11 @@
 }
 
 .dialog_button:hover{
-    background-color: var(--dialog-button-bg-hover);
+    background-color: var(--button-bg-hover);
 }
 
 .dialog_button:active{
-    background-color: var(--dialog-button-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 .ignore{
