--- a/src/Pages/Chessboard/SideBar/ResignButton/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/ResignButton/styles.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 60px;
-    background-color: var(--sidebar-button-bg);
+    background-color: var(--button-bg-bg);
     border: none;
     border-radius: 10px;
     grid-column: 1/3;
@@ -11,11 +11,11 @@
 }
 
 .button:hover{
-    background-color: var(--sidebar-button-bg-hover);
+    background-color: var(--button-bg-bg-hover);
 }
 
 .button:active{
-    background-color: var(--sidebar-button-bg-active);
+    background-color: var(--button-bg-bg-active);
 }
 
 .button > img{
@@ -43,7 +43,7 @@
     height: 30px;
     border-radius: 10px;
     border: none;
-    background-color: var(--dialog-button-bg);   
+    background-color: var(--button-bg);   
     cursor: pointer;
 }
 
@@ -58,11 +58,11 @@
 }
 
 .dialog_button:hover{
-    background-color: var(--dialog-button-bg-hover);
+    background-color: var(--button-bg-hover);
 }
 
 .dialog_button:active{
-    background-color: var(--dialog-button-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 @media(max-width: 620px){
