--- a/src/Pages/FindPlayers/styles.module.css
+++ b/src/Pages/FindPlayers/styles.module.css
@@ -34,7 +34,7 @@
 .queue_button{
     width: 100%;
     height: 45px;
-    background-color: var(--menu-button-bg);
+    background-color: var(--button-bg-bg);
     color: #CECECE;
     border-radius: 10px;
     font-family: 'mulish';
@@ -44,11 +44,11 @@
 }
 
 .queue_button:hover{
-    background-color: var(--menu-button-bg-hover);    
+    background-color: var(--button-bg-bg-hover);    
 }
 
 .queue_button:active{
-    background-color: var(--menu-button-bg-active);
+    background-color: var(--button-bg-bg-active);
 }
 
 
