--- a/src/Pages/Menu/PlayOnlineButton/styles.module.css
+++ b/src/Pages/Menu/PlayOnlineButton/styles.module.css
@@ -1,7 +1,7 @@
 .play_button{
     width: 100%;
     height: 45px;
-    background-color: var(--menu-button-bg);
+    background-color: var(--button-bg-bg);
     color: #CECECE;
     border-radius: 10px;
     font-family: 'mulish';
@@ -11,9 +11,9 @@
 }
 
 .play_button:hover{
-    background-color: var(--menu-button-bg-hover);    
+    background-color: var(--button-bg-bg-hover);    
 }
 
 .play_button:active{
-    background-color: var(--menu-button-bg-active);
+    background-color: var(--button-bg-bg-active);
 }
