--- a/src/Pages/FindPlayers/WaitingForReply/styles.module.css
+++ b/src/Pages/FindPlayers/WaitingForReply/styles.module.css
@@ -21,7 +21,7 @@
 .cancel{
     width: 100%;
     height: 45px;
-    background-color: var(--challenge-button-bg);
+    background-color: var(--button-bg);
     color: #CECECE;
     border-radius: 10px;
     font-family: 'mulish';
@@ -30,10 +30,10 @@
     cursor: pointer;
 }
 
-.queue_button:hover{
-    background-color: var(--challenge-button-bg-hover);    
+.cancel:hover{
+    background-color: var(--button-bg-hover);    
 }
 
-.queue_button:active{
-    background-color: var(--challenge-button-bg-active);
+.cancel:active{
+    background-color: var(--button-bg-active);
 }
