--- a/src/Pages/FindPlayers/DisplayChallenger/WaitingForReply/styles.module.css
+++ b/src/Pages/FindPlayers/DisplayChallenger/WaitingForReply/styles.module.css
@@ -1,3 +1,15 @@
+.overlay{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .container{
     width: 212px;
     display: flex;
