--- a/src/Pages/Authentication/ForgotPassword/Form/styles.module.css
+++ b/src/Pages/Authentication/ForgotPassword/Form/styles.module.css
@@ -13,17 +13,17 @@
     font-family: 'mulish';
     font-size: 1.2rem;
     border: none;
-    background-color: var(--login-button-bg);
+    background-color: var(--button-bg);
     color: var(--text-color);
     cursor: pointer;
 }
 
 .form_submit:hover{
-    background-color: var(--login-button-bg-hover);
+    background-color: var(--button-bg-hover);
 }
 
 .form_submit:active{
-    background-color: var(--login-button-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 .error_message{
