--- a/src/Pages/Chessboard/SideBar/RedoButton/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/RedoButton/styles.module.css
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 60px;
-    background-color: var(--button-bg-bg);
+    background-color: var(--button-bg);
     border: none;
     border-radius: 10px;
     grid-column: 2/3;
@@ -11,11 +11,11 @@
 }
 
 .button:hover{
-    background-color: var(--button-bg-bg-hover);
+    background-color: var(--button-bg-hover);
 }
 
 .button:active{
-    background-color: var(--button-bg-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 
