--- a/src/Pages/Menu/styles.module.css
+++ b/src/Pages/Menu/styles.module.css
@@ -16,7 +16,7 @@
 .menu_option{
     width: 100%;
     height: 45px;
-    background-color: var(--button-bg-bg);
+    background-color: var(--button-bg);
     color: #CECECE;
     border-radius: 10px;
     font-family: 'mulish';
@@ -26,11 +26,11 @@
 }
 
 .menu_option:hover{
-    background-color: var(--button-bg-bg-hover);    
+    background-color: var(--button-bg-hover);    
 }
 
 .menu_option:active{
-    background-color: var(--button-bg-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 @media(max-width: 530px){
