--- a/src/Pages/FindPlayers/DisplayChallenger/WaitingForReply/styles.module.css
+++ b/src/Pages/FindPlayers/DisplayChallenger/WaitingForReply/styles.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    position: fixed;
+    position: absolute;
     top: 0px;
     left: 0px;
     display: flex;
@@ -11,14 +11,16 @@
 }
 
 .container{
-    width: 212px;
+    width: 300px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     gap: 15px;
     padding: 10px;
-    background-color: var(--queue-container-bg);
+    background-color: var(--dialog-bg);
     border-radius: 15px;
+    border: none;
 }
 
 .title{
