--- a/src/Pages/FindPlayers/styles.module.css
+++ b/src/Pages/FindPlayers/styles.module.css
@@ -1,12 +1,16 @@
+.container{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .queue{
     width: 500px;
     padding: 20px 30px 20px 30px;
     background-color: var(--container-background);
     border-radius: 10px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,7 +38,7 @@
 .queue_button{
     width: 100%;
     height: 45px;
-    background-color: var(--button-bg-bg);
+    background-color: var(--button-bg);
     color: #CECECE;
     border-radius: 10px;
     font-family: 'mulish';
@@ -44,11 +48,11 @@
 }
 
 .queue_button:hover{
-    background-color: var(--button-bg-bg-hover);    
+    background-color: var(--button-bg-hover);    
 }
 
 .queue_button:active{
-    background-color: var(--button-bg-bg-active);
+    background-color: var(--button-bg-active);
 }
 
 
