--- a/src/Pages/FindPlayers/DisplayCurrentChallenge/styles.module.css
+++ b/src/Pages/FindPlayers/DisplayCurrentChallenge/styles.module.css
@@ -60,7 +60,7 @@
     font-size: 1.2rem;
     border: none;
     background-color: var(--button-bg);
-    color: var(--button-bg-text);
+    color: var(--text-color);
     cursor: pointer;
 }
 
