--- a/src/Pages/Chessboard/Squares/styles.module.css
+++ b/src/Pages/Chessboard/Squares/styles.module.css
@@ -13,3 +13,54 @@
 .darkSquare{
     background-color: rgb(0, 0, 219);
 }
+
+
+.content_title{
+    grid-column: 1/3;
+    font-size: 1.5rem;
+    font-family: 'mulish';
+    font-weight: 800;
+    color: #CECECE;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    text-align: center;
+    margin: 0px;
+}
+
+.content_pieces{
+    grid-column: 1/3;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 10px;
+
+}
+
+.content_piece{
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--dialog-promotion-button-bg);
+    border: 0px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.content_piece:hover{
+    background-color: var(--dialog-promotion-button-hover);
+}
+
+.content_piece:active{
+    background-color: var(--dialog-promotion-button-active);
+}
+
+.content_piece > img{
+    width: 30px;
+    object-fit: contain;
+}
+
+.ignore{
+    display: none;
+}
