--- a/src/global.css
+++ b/src/global.css
@@ -21,7 +21,7 @@ body{
     --far: 25;
     --farthest: 1;
 
-    --background: rgb(0, 0, 112);
+    --background: #000070;
     --container-background: rgb(1, 1, 44);
     --mobile-container-background: rgba(0, 0, 0, 0.5);
 
