--- a/src/Pages/Home/NavigationBar/styles.module.css
+++ b/src/Pages/Home/NavigationBar/styles.module.css
@@ -20,12 +20,13 @@
     width: 40px;
     height: 40px;
     background-color: transparent;
-    border: none
+    border: none;
 }
 
 .navigation_logo > img{
     width: 40px;
     height: 40px;
+    border-radius: 10px;
 }
 
 .navigation_links{
