--- a/src/Pages/Home/Header/AnimateTitle/styles.module.css
+++ b/src/Pages/Home/Header/AnimateTitle/styles.module.css
@@ -1,7 +1,21 @@
 .container{
+    height: 100px;
     display: flex;
+    justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 30px;
+}
+
+.word_container{
+    display: flex;
+    gap: 5px;
+    justify-content: center;
+    align-items: center;
+}
+
+.letter_container{
+    width: 50px;
+    height: auto;
 }
 
 .title{
