--- a/src/Pages/Home/Header/AnimateTitle/styles.module.css
+++ b/src/Pages/Home/Header/AnimateTitle/styles.module.css
@@ -1,5 +1,6 @@
-.container{
-    height: 100px;
+.title{
+    width: 100%;
+    height: calc(100dvh - 60px);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,12 +17,4 @@
 .letter_container{
     width: 50px;
     height: auto;
-}
-
-.title{
-    margin: 0px;
-    font-family: 'amanda black';
-    font-size: 5rem;
-    color: var(--text-color);
-    font-weight: 300;
 }
