--- a/src/Pages/Home/Header/styles.module.css
+++ b/src/Pages/Home/Header/styles.module.css
@@ -1,7 +1,4 @@
 .header{
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: calc(100dvh - 60px);
+    min-height: calc(100dvh - 60px);    
 }
