--- a/src/Pages/Home/Header/AnimateTitle/styles.module.css
+++ b/src/Pages/Home/Header/AnimateTitle/styles.module.css
@@ -1,10 +1,11 @@
 .title{
     width: 100%;
-    height: calc(100dvh - 60px);
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 30px;
+    position: relative;
+    z-index: var(--closer);
 }
 
 .word_container{
