--- a/src/Pages/Home/Header/AnimateTitle/styles.module.css
+++ b/src/Pages/Home/Header/AnimateTitle/styles.module.css
@@ -1,5 +1,5 @@
 .title{
-    width: 100%;
+    width: 1000px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,4 +18,10 @@
 .letter_container{
     width: 50px;
     height: auto;
+}
+
+@media(max-width: 1000px){
+    .title{
+        width: 600px;
+    }
 }
