--- a/src/Pages/Home/NavigationBar/MobileNavBar/styles.module.css
+++ b/src/Pages/Home/NavigationBar/MobileNavBar/styles.module.css
@@ -48,7 +48,7 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    z-index: var(--closer);
+    z-index: var(--closest);
     display: flex;
     justify-content: end;
 }
