--- a/src/Pages/Home/Header/AnimateTitle/styles.module.css
+++ b/src/Pages/Home/Header/AnimateTitle/styles.module.css
@@ -1,6 +1,7 @@
 .title{
     width: 1000px;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(3, auto);
     justify-content: center;
     align-items: center;
     gap: 30px;
@@ -15,13 +16,18 @@
     align-items: center;
 }
 
-.letter_container{
-    width: 50px;
-    height: auto;
-}
 
 @media(max-width: 1000px){
     .title{
-        width: 600px;
+        width: 90%;
+        grid-template-columns: repeat(2, auto);
     }
+
+    .word_container:nth-child(3){
+        grid-column: 1/3;
+    }
+}
+
+@media(max-width: 700px){
+    
 }
