--- a/src/Pages/Chessboard/SideBar/MobileBar/MobileDisplayTurn/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/MobileBar/MobileDisplayTurn/styles.module.css
@@ -1,9 +1,12 @@
 .currentTurn{
-    margin: 20px 0px 0px 0px;
-    font-size: 2rem;
+    margin: 0px;
+    font-size: 1.4rem;
     font-family: 'mulish';
     text-transform: capitalize;
     font-weight: 800;
     color: var(--text-color);
     white-space: nowrap;
+    grid-column: 1/3;
+    grid-row: 1/2;
+    justify-self: center;
 }
