--- a/src/Pages/Chessboard/SideBar/PiecesTaken/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/PiecesTaken/styles.module.css
@@ -50,8 +50,29 @@
 @media(max-width: 620px){
     .pieces{
         width: 100%;
-        height: 200px;
-        background-color: var(--mobile-container-background);
+        height: auto; 
+        background-color: transparent;  
+        display: grid;
+        grid-column: 1/4;
+        grid-row: 1/3;
+        grid-template-columns: 100px 1fr;
         padding: 10px 25px;
+    }
+
+    .pieces_white{
+        grid-column: 2/3;
+        grid-row: 1/2;
+    }
+
+    .pieces_black{
+        grid-column: 2/3;
+        grid-row: 2/3;
+    }
+
+    .pieces_title{
+        font-size: 1rem;
+        grid-row: 1/3;
+        grid-column: 1/2;
+        align-self: center;
     }
 }
