--- a/src/Pages/Chessboard/SideBar/ResignButton/styles.module.css
+++ b/src/Pages/Chessboard/SideBar/ResignButton/styles.module.css
@@ -69,6 +69,8 @@
     .button{
         width: 60px;
         height: 40px;
+        grid-column: 2/3;
+        grid-row: 2/3;
     }
 
     .button > img{
