--- a/src/Pages/Home/NavigationBar/styles.module.css
+++ b/src/Pages/Home/NavigationBar/styles.module.css
@@ -6,6 +6,8 @@
     justify-content: center;
     gap: 35px;
     background-color: transparent;
+    position: relative;
+    z-index: var(--close);
 }
 
 
