--- a/src/Pages/Home/BackgroundMouseAnimation/styles.module.css
+++ b/src/Pages/Home/BackgroundMouseAnimation/styles.module.css
@@ -11,7 +11,7 @@
     width: 50px;
     height: 50px;
     position: absolute;
-    background-color: #000070;
+    background-color: rgba(0, 0, 112, 0.5);
     border-radius: 50%;
     transition: all 0.2s linear, top 0s left 0s;
 }
