--- a/src/Pages/Home/Intro/Header/styles.module.css
+++ b/src/Pages/Home/Intro/Header/styles.module.css
@@ -1,9 +1,12 @@
 .header{
     width: 100%;
-    min-height: calc(100dvh - 80px);    
+    min-height: calc(100vh - 80px);   
     display: flex;
     flex-direction: column;
     gap: 15px;
     justify-content: center;
     align-items: center;
+    position: sticky;
+    top: 0px;
+    z-index: var(--close);
 }
