--- a/src/Pages/Home/NavigationBar/MobileNavBar/styles.module.css
+++ b/src/Pages/Home/NavigationBar/MobileNavBar/styles.module.css
@@ -5,6 +5,9 @@
     justify-content: center;
     align-items: center;
     background-color: black;
+    position: sticky;
+    top: 0px;
+    z-index: var(--closer);
 }
 
 .navigation_button{
