--- a/src/Pages/Home/NavigationBar/styles.module.css
+++ b/src/Pages/Home/NavigationBar/styles.module.css
@@ -1,22 +1,40 @@
 .navigation{
     width: 100%;
     height: 80px;    
+    position: sticky;
+    top: 0px;
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 35px;
-    background-color: transparent;
-    position: relative;
-    z-index: var(--close);
+    z-index: var(--closer);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 
 .navigation_content{
     width: 1000px;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 35px;
     align-items: center;
 }
+
+.navigation_link{
+    color: white;
+    font-family: 'mulish';
+    font-weight: 800;
+    cursor: pointer;
+}
+
+.navigation_link:hover{
+    text-decoration: underline;
+}
+
+.navigation_link:active{
+    color: #0000ff;
+}
+
 
 .navigation_logo{
     height: 49px;
