--- a/src/Pages/Home/DisplayBorder/styles.module.css
+++ b/src/Pages/Home/DisplayBorder/styles.module.css
@@ -1,16 +1,28 @@
 .dash{
-    background-color:var(--background);
+    background-color: blue;
     position: fixed;
     border-radius: 10px;
     z-index: var(--closest);
 }
 
+.glowEffect{
+    background-color: blue;
+    border-radius: 10px;
+    filter: blur(100px);
+}
+
 .dash:nth-of-type(1){
+    left: 0px;
+    top: 100px;
     width: 7px;
     height: 100px;
-    left: 0px;
-    top: 100px
 }
+
+.dash:nth-of-type(1) > .glowEffect{
+    width: 65px;
+    height: 130px;
+}
+
 
 .dash:nth-of-type(2){
     width: 7px;
@@ -18,57 +30,127 @@
     left: 0px;
     top: 400px
 }
+
+.dash:nth-of-type(2) > .glowEffect{
+    width: 85px;
+    height: 110px;
+}
+
+
+
 .dash:nth-of-type(3){
     width: 7px;
     height: 40px;
     left: 0px;
     top: 500px
 }
+
+.dash:nth-of-type(3) > .glowEffect{
+    width: 35px;
+    height: 120px;
+}
+
+
 .dash:nth-of-type(4){
     width: 7px;
     height: 20px;
     left: 0px;
     top: 800px
 }
+
+.dash:nth-of-type(4) > .glowEffect{
+    width: 85px;
+    height: 50px;
+}
+
+
 .dash:nth-of-type(5){
     width: 180px;
     height: 7px;
     left: 200px;
     top: 0px
 }
+
+.dash:nth-of-type(5) > .glowEffect{
+    width: 210px;
+    height: 60px;
+}
+
+
 .dash:nth-of-type(6){
     width: 40px;
     height: 7px;
     left: 500px;
     top: 0px
 }
+
+.dash:nth-of-type(6) > .glowEffect{
+    width: 70px;
+    height: 90px;
+}
+
+
 .dash:nth-of-type(7){
     width: 7px;
     height: 60px;
     right: 0px;
     top: 400px
 }
+
+.dash:nth-of-type(7) > .glowEffect{
+    width: 35px;
+    height: 80px;
+}
+
+
+
 .dash:nth-of-type(8){
     width: 7px;
     height: 120px;
     right: 0px;
     bottom: 600px
 }
+
+.dash:nth-of-type(8) > .glowEffect{
+    width: 165px;
+    height: 160px;
+}
+
+
+
 .dash:nth-of-type(9){
     width: 340px;
     height: 7px;
     left: 200px;
     bottom: 0px
 }
+
+.dash:nth-of-type(9) > .glowEffect{
+    width: 368px;
+    height: 60px;
+}
+
+
 .dash:nth-of-type(10){
     width: 235px;
     height: 7px;
     right: 0px;
     bottom: 0px
 }
+
+.dash:nth-of-type(10) > .glowEffect{
+    width: 260px;
+    height: 60px;
+}
+
 .dash:nth-of-type(11){
     width: 300px;
     height: 7px;
     top: 0px;
     right: 100px;
+}
+
+.dash:nth-of-type(11) > .glowEffect{
+    width: 340px;
+    height: 60px;
 }
