--- a/src/global.css
+++ b/src/global.css
@@ -16,7 +16,6 @@ html{
 body{
     margin: 0px;
     min-height: 100vh;
-    height: 5000px;
     background-color: var(--background);
     overflow-x: hidden;
     scroll-behavior: smooth;
@@ -33,6 +32,11 @@ body{
     --close: 50;
     --far: 25;
     --farthest: 1;
+
+    --full-document-height-home-page: 25000px;   /* 100% */
+    --intro-section-height-home-page: 11000px;  /* 40% */
+    --aboutus-section-height-home-page: 1000px; /* 7% */
+    --grandmaster-section-height-home-page: 1700px; /* 6.8%*/
 
     --background: #000070;
     --container-background: rgb(1, 1, 44);
