--- a/src/global.css
+++ b/src/global.css
@@ -37,6 +37,7 @@ body{
     --intro-section-height-home-page: 11000px;  /* 40% */
     --aboutus-section-height-home-page: 1000px; /* 7% */
     --grandmaster-section-height-home-page: 1700px; /* 6.8%*/
+    --blue-screen-section-height-home-page: 11300px; /* 45.2%*/
 
     --background: #000070;
     --container-background: rgb(1, 1, 44);
