--- a/src/Pages/Home/FAQ/AnimateBoxToScreen/AnimateScreen/styles.module.css
+++ b/src/Pages/Home/FAQ/AnimateBoxToScreen/AnimateScreen/styles.module.css
@@ -8,12 +8,24 @@
     z-index: var(--close);
     transition: all 0s;
     padding: 80px 0px;    
+    overflow: hidden;
 }
 
 .screen_content{
+    width: 90%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: start;
+    justify-items: center;
+    margin: auto;
     gap: 45px
+}
+
+@media(max-width: 700px){
+    .screen_content{
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
 }
 
 @media(max-width: 600px){
