--- a/src/Pages/Home/GrandmasterMessage/styles.module.css
+++ b/src/Pages/Home/GrandmasterMessage/styles.module.css
@@ -1,6 +1,6 @@
 .container{
     width: 90%;
-    height: var(--grandmaster-section-height-home-page);
+    height: 1500px;
     display: grid;
     grid-template-columns: repeat(2, auto);
     justify-content: center;
