--- a/src/Pages/Home/NavigationBar/MobileNavBar/styles.module.css
+++ b/src/Pages/Home/NavigationBar/MobileNavBar/styles.module.css
@@ -7,7 +7,7 @@
     background-color: black;
     position: sticky;
     top: 0px;
-    z-index: var(--closer);
+    z-index: var(--closest);
 }
 
 .navigation_button{
