--- a/src/global.css
+++ b/src/global.css
@@ -33,12 +33,12 @@ body{
     --far: 25;
     --farthest: 1;
 
-    --full-document-height-home-page: 15000px;  
+    --full-document-height-home-page: auto;  
     --intro-section-height-home-page: 6900px;  
     --aboutus-section-height-home-page: 1050px; 
     --grandmaster-section-height-home-page: 1500px; 
     --blue-screen-section-height-home-page: 2700px; 
-    --footer-section-height-home-page: 0px;
+    --footer-section-height-home-page: 100vh;
 
     --background: #000070;
     --container-background: rgb(1, 1, 44);
