--- a/src/Pages/Home/Footer/styles.module.css
+++ b/src/Pages/Home/Footer/styles.module.css
@@ -1,4 +1,51 @@
 .container{
     width: 100%;
+    padding: 150px 0px 0px 0px;
     height: var(--footer-section-height-home-page);
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    position: relative;
+}
+
+.title{
+    width: 950px;
+    height: 100px;
+    font-size: 5rem;
+    color: blue;
+    font-family: 'mulish';
+    font-weight: 800;
+    margin: 0px;
+    position: relative;
+    white-space: nowrap;
+}
+
+.title > span{
+    position: absolute;
+    inset: 0;
+    margin: auto;
+    text-align: center;
+}
+
+
+.title > span:last-child{
+    filter: blur(15px);
+}
+
+@media(max-width: 1000px){
+    .title{
+        width: 600px;
+        height: 70px;
+        font-size: 3.1rem;
+    }
+}
+
+@media(max-width: 630px){
+    .title{
+        width: 340px;
+        height: 40px;
+        font-size: 1.7rem;
+    }
 }
